Nov 30, 2021
  added generation of ontology/CHEBI tracks for GRCm39 assembly

Nov 02, 2021
  agr: fixed

Sep 24, 2021
  ontology extractor: fixed names for generated ontology files, for vervet and molerat

Sep 21, 2021
  NCBI prep: added code to prep fna files for scaffold assemblies for loading into RGD JBrowse
  JBrowse tracks: added support for green monkey Vero_WHO_p1.0 assembly

Jul 14, 2021
  AGR gene extractor: fixed code to not emit duplicate gene entries

Jun 17, 2021
  improved code for handling species

Jun 16, 2021
  rn7.2: added generation and loading of disease/gene-drug tracks
  vervet: chlSab2 assembly: added generation and loading of gene/disease/gene-drug tracks
  molerat: hetGla2 assembly: added generation and loading of gene/disease/gene-drug tracks

Jun 15, 2021
  improved species handling

Jun 11, 2021
  added gff3 qtl extractor and JBrowse track loader for mouse assembly GRCm39

May 18, 2021
  agr extractor: date_produced field aligned with DQM requirements
  damaging variants: fixed sql and code to work with new variant table structure

Apr 29, 2021
  rat strains: added code to generate gff3 files and tracks for mutant and congenic strains on assembly 7.2
  rat qtls: added code to generate gff3 files and tracks for qtls on assembly 7.2

Apr 26, 2021
  rat markers: added export for assembly mRatBN7.2

Jan 28, 2021
  added NcbiPrep tool: to prepare NCBI fasta files for loading into JBrowse
  rat genes: added export for assembly mRatBN7.2

Jan 19, 2021
  genes: removed code referencing UniGene IDs (UniGene IDs removed from RGD database)

Dec 4, 2020
  JBrowse tracks: added gene tracks for GRCm39 assembly

Nov 06, 2020
  genes: added export of GRCm39 assembly

Sep 18, 2020
  qtls: code refactor (1st step for parallelization)

Sep 16, 2020
  bonobo genes: added export for new reference assembly 'Mhudiblu_PPA_v0'

Sep 04, 2020
  agr: fixed export of CDS

Aug 28, 2020