@@ -1,5 +1,6 @@
 Nov 30, 2021
   added generation of ontology/CHEBI tracks for GRCm39 assembly
+  sped up generation of ontology files
 
 Nov 02, 2021
   agr: fixed
